# interview-forge

./: .gitattributes  .gitignore  LICENSE  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
data/: jds.sample.json  resume.example.txt
docs/: DATA_SCHEMA.md
src/: api.py  cli.py
src/agent/: interviewer.py  runtime.py
src/infra/: anki.py  asr.py  config.py  db.py  embed.py  llm.py  persona.py  rerank.py  retrieval.py  schema.sql  schema_agent.sql  schema_jobs.sql  schema_vector.sql
src/obsidian/: vault_path.py  writer.py
src/pipelines/: answer_forge.py  bulk.py  card_synth.py  frontier.py  gap_analyzer.py  ingest.py  job_matcher.py  jobs.py  materials.py
src/prompts/: answer_forge.md  answer_forge_rag.md
src/web/: app.js  index.html
tests/: test_smoke.py
